fixed spacing issue with car rental card

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1584,6 +1584,7 @@ html {
                 text-align: left;
                 height: (40/16rem);
                 margin-left: 0;
+                padding-left: 2rem;
             }
 
             p {
